--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+elogind-openrc (0.0.2)  nitrux; urgency=medium
+
+  * Use supervise-daemon for daemons.
+
+ -- Uri Herrera <uri_herrera@nxos.org>  Sat, 19 Jul 2025 02:00:00 -0500
+
 elogind-openrc (0.0.1)  nitrux; urgency=medium
 
   * Create package.
